raffia/tests/recoverable/declaration/top-level-ident.css.error.snap
---
source: raffia/tests/recoverable.rs
---
error: declaration at top level is disallowed
  ┌─ top-level-ident.css:1:1
  │
1 │ height: 1px
  │ ^^^^^^^^^^^
